# vocabu-larry

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  TODO.md  database.txt  english.txt  run-local.bat  run-tests.bat  score-louis.json  trainer.fsx
.cargo/: config.toml
.github/: copilot-instructions.md
dictionaries/: english.txt  franz abfrage.txt  franz verbformen.txt  french. klamoten  french.txt  loony-english.txt
dictionaries/leonie/: englisch-2025-2-10.txt  englisch-neue.txt  englisch-neuesten.txt  englisch-rockies.txt  english-6a-1.txt  english-6a-2.txt  english-all.txt  english-new.txt  english.all.txt  english.new.txt  english.txt  franz-neue.txt  french-2025-02-10.txt  french-all.txt  french-new.txt  french-rooms.txt  french-schulsachen  french.all.txt  french.new.txt
dictionaries/louis/: English SA.txt  e aktuel.txt  e aktuell.txt  e aktuelll.txt  english 8te aktuell.txt  english 8te rest.txt  english 8te.txt  english Alles.txt  english zeit.txt  english-grade-6.txt  english.8te rest.txt  english.9te.txt  english.Alles.txt  english.aktuelle.txt  english.txt  english.zeit.txt  franz 8te.txt  franz abfrage.txt  franz alles.txt  franz wichtg.txt  franz wichtig.txt  franz8te.txt  franzSA.txt  french.8te.txt  french.SA.txt  french.abfrage.txt  french.alles.txt  french.samü.txt  french.txt  french.verbformen.txt  frnaz wichtig.txt  ka test.txt
doc/: backlog.md
src/WebApi/: Cargo.toml  index.js  package.json  pnpm-lock.yaml  webpack.config.js
src/WebApi-Rust/: .gitignore  Cargo.toml  rustfmt.toml
src/WebApi-Rust/src/: config.rs  error.rs  handlers.rs  lib.rs  main.rs  shared.rs  state.rs  storage.rs  types.rs
src/WebApi-Rust/src/features/: mod.rs  scores.rs  training.rs  users.rs
src/WebApi-Rust/tests/: smoke.rs
src/WebApi/src/: config.rs  error.rs  lib.rs  logging.rs  main.rs  shared.rs  state.rs
src/WebApi/src/features/: login.rs  logs.rs  mod.rs  scores.rs  training.rs  users.rs
src/WebApi/tests/: smoke.rs
src/WebUI/: Cargo.toml  Trunk.toml  index.html  logo.xcf  package.json  pnpm-lock.yaml  styles.css  vite.config.js
src/WebUI-Yew/: Cargo.toml  Trunk.toml  index.html  styles.css  sw.js
src/WebUI-Yew/src/: api.rs  models.rs
src/WebUI-Yew/src/views/: login.rs  logs.rs  mod.rs  score.rs
src/WebUI/src/: App.vue  api.js  api.rs  lib.rs  main.js  main.rs  router.js  store.js
src/WebUI/src/views/: ExamView.vue  LoginView.vue  LogsView.vue  ScoreView.vue  exam.rs  exam_viewmodel.rs  login.rs  login_viewmodel.rs  logs.rs  logs_viewmodel.rs  mod.rs  score.rs  score_viewmodel.rs
tests/: Cargo.toml
tests/features/: login.feature  logs.feature  scoring.feature
tests/src/: main.rs
tests/src/pages/: exam.rs  login.rs  logs.rs  score.rs
tests/src/steps/: common.rs  exam.rs  logs.rs  mod.rs
tests/src/support/: backend.rs  browser.rs  frontend.rs  mod.rs  world.rs
web/: README.md  ToDo.md  package-lock.json  package.json
web/src/: App.vue  router.js  store.js
web/src/router/: index.js
web/src/views/: ExamView.vue  HomeView.vue  LoginView.vue  MainView.vue
xtask/: Cargo.toml
xtask/src/: main.rs
