[package]
name = "vocabu-larry-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
axum-server = { version = "0.7", features = ["tls-rustls-no-provider"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread", "sync"] }
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
