[package]
name = "vocabu-larry-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
axum-server = { version = "0.7", features = ["tls-rustls-no-provider"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
rustls = { version = "0.23", features = ["ring"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["fs", "io-util", "macros", "rt-multi-thread", "sync"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
