[package]
name = "vocabu-larry-webui"
version = "0.1.0"
edition = "2021"

[dependencies]
gloo-net = "0.6"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["HtmlInputElement", "HtmlSelectElement", "Window", "Location"] }
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"
