[package]
name = "vocabu-larry-webui"
version = "0.1.0"
edition = "2021"

[dependencies]
js-sys = "0.3"
reqwest = { version = "=0.11.27", default-features = false, features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
urlencoding = "2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["HtmlInputElement", "HtmlSelectElement", "Window", "Location"] }
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
url = "=2.4.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.reqwest]
version = "=0.11.27"
default-features = false
features = ["json", "rustls-tls"]
